--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,15 @@
+.download{
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    background-color: white;
+    padding: 10px 20px;
+    border-radius: 10px;
+    z-index: 2;
+    font-family: Arial, Helvetica, sans-serif;
+    cursor: pointer;
+}
+
 .settings{
     width: 100%;
     height: 200px;
