--- a/src/style.css
+++ b/src/style.css
@@ -1,81 +1,78 @@
-*{
-    font-family: Arial, Helvetica, sans-serif;
+* {
+  font-family: Helvetica, Arial, sans-serif;
 }
 
-.download-icon{
-    height: 50px;
-    cursor: pointer;
+.settings {
+  color: white;
+  width: 100%;
+  height: 150px;
+  position: fixed;
+  backdrop-filter: blur(40px);
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  -webkit-user-select: none;
+  background-color: rgba(42, 45, 68, 0.8);
+  box-shadow: 0px -5px 0px 0px rgba(42, 45, 68, 1);
 }
 
-.settings{
-    width: 100%;
-    height: 200px;
-    position: fixed;
-    backdrop-filter: blur(40px);
-    bottom: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    -webkit-user-select: none;
-    background-color: rgba(0,0,0,0.1);
+.settings-progess {
+  position: absolute;
+  height: 5px;
+  background: #00e8da;
+  top: -5px;
+  left: 0;
 }
 
-.setting-block{
-    width: 80%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;        
+.setting-block {
+  width: 80%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.setting-block__center{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.setting-block__center {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 20px;
+  font-weight: 100;
+  height: 70px;
+  width: 300px;
 }
 
-.setting-block__title{    
-    font-size: 20px;
-    font-weight: 100;
-    margin-bottom: 20px;     
+.setting-block__arrows {
+  width: 30px;
+  cursor: pointer;
 }
 
-.setting-block__arrows{
-    font-family: monospace;
-    font-size: 60px;
-    cursor: pointer;
+.setting-block__arrows--disabled {
+  pointer-events: none;
+  opacity: 0;
 }
 
-.setting-block__arrows--disabled{
-    pointer-events: none;
-    opacity: 0;
+.setting-block__colors-wrapper {
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
+  width: 100%;
 }
 
-.setting-block__colors-wrapper{
-    display: flex;
-    justify-content: center;
-    text-align: center;
+.setting-block__color {
+  width: 30px;
+  height: 30px;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
-.setting-block__color{
-    width: 30px;
-    height: 90px;        
-    cursor: pointer; 
+.setting-block__color--selected {
+  box-shadow: 0px 0px 11px 0px #00e8da;
 }
 
-.setting-block__color:first-of-type{
-    border-radius: 10px 0 0 10px;
-}
-
-.setting-block__color:last-of-type{
-    border-radius: 0 10px 10px 0;
-}
-
-.setting-block__color--selected{
-    border-bottom: 5px solid black;        
-}
-
-.setting-block__color:last-of-type{
-    margin-right: 0;
+.download-icon {
+  height: 40px;
+  cursor: pointer;
 }
